# spf

./: .gitignore  Cargo.toml  README.md  index.html
release/web/: index.html  spf.wasm
resource/: blue.aseprite  blue2.aseprite  spflogo.aseprite
src/: bullet.rs  main.rs  square.rs
