[package]
name = "spf"
version = "0.0.1"
edition = "2021"
authors = ["ben aka goukart", "ralf aka sirtunahead"]
publish = false


[dependencies]
bevy = "0.8.1"
bevy_rapier3d = { version = "0.17.0", features = [ "simd-stable", "debug-render" ] }
# rapier3d = { version = "0.15.0", features = [ "simd-stable" ] }

[profile.dev.package.rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1
